--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,24 +8,22 @@ jobs:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
-    - name: 🚚 Get latest code
-      uses: actions/checkout@v3
-    
-    - name: 🔨 Build Project
-      run: |
-        npm install
-        npm run build
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-      with:
-        server: ${{ secrets.server }}
-        username: ${{ secrets.ftp_username }}
-        password: ${{ secrets.ftp_password }}
-        port: 21
-        server-dir: foro-nearshoring/	
-        local-dir: ./dist/
-        exclude: |
-          **/.git*
-          **/.git*/**
-          **/node_modules/**
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Build
+        run: npm run build
+
+      - name: deploy file to server
+        uses: wlixcc/SFTP-Deploy-Action@v1.2.4
+        with:
+          username: "${{ secrets.SFTP_USERNAME }}"
+          server: "${{ secrets.SERVER }}"
+          port: "${{ secrets.SSH_PORT }}"
+          local_path: "./dist/*"
+          remote_path: "/home/hfmexico/public_html/foro-nearshoring"
+          sftp_only: true
+          password: "${{ secrets.SFTP_PASSWORD }}"
